# lab-de-synthlog

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
examples/: config.yaml
infra/: artifact_registry.tf  cloud_run_job.tf  main.tf  outputs.tf  scheduler.tf  service_account.tf  terraform.tfvars.example  variables.tf
src/synthlog/: __init__.py  cli.py  clock.py  config.py
src/synthlog/api/: __init__.py  app.py  auth.py  job_manager.py  models.py  routes_generate.py  routes_logs.py  routes_meta.py
src/synthlog/emitter/: __init__.py  console.py  jsonl.py  protocols.py
src/synthlog/engine/: __init__.py  baseline.py  event_builder.py  protocols.py  rng.py  scenario_loader.py  scheduler.py  streaming.py
src/synthlog/entities/: __init__.py  application.py  device.py  factory.py  group.py  network.py  pool.py  user.py  user_agent.py
src/synthlog/scenarios/: __init__.py  credential_stuffing.yaml  mfa_fatigue.yaml
src/synthlog/schema/: __init__.py  actor.py  client.py  context.py  enums.py  log_event.py  outcome.py  request.py  target.py  transaction.py
tests/test_api/: test_api.py
tests/test_emitter/: test_jsonl.py
tests/test_engine/: test_baseline.py  test_event_builder.py  test_scenario_loader.py  test_streaming.py
tests/test_entities/: test_factory.py
tests/test_schema/: test_log_event.py
