[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthlog"
version = "0.1.0"
description = "Synthetic Okta System Log event producer for detection engineering"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "faker>=25.0,<30",
    "pyyaml>=6.0,<7",
    "typer>=0.12,<1",
    "rich>=13.0,<14",
    "orjson>=3.10,<4",
]

[project.optional-dependencies]
server = ["uvicorn>=0.30,<1", "fastapi>=0.111,<1"]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<2",
    "pytest-cov>=5.0,<6",
    "httpx>=0.27,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[project.scripts]
synthlog = "synthlog.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/synthlog"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["synthlog"]
mypy_path = "src"
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
